components/go-test-cy/base/service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app.kubernetes.io/instance: go-test-cy
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: go-test-cy 
  name: go-test-cy
spec:
  ports:
  - port: 8081 
    targetPort: 8081 
  selector:
    app.kubernetes.io/instance: go-test-cy
