components/go-test-cy/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: go-test-cy
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: go-test-cy 
  name: go-test-cy
spec:
  port:
    targetPort: 8081 
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: go-test-cy
    weight: 100
